<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <item android:id="@+id/action_new"
        android:title="@string/action_new"
        android:orderInCategory="70"
        android:icon="@drawable/action_new"
        app:showAsAction="always" />

    <item android:id="@+id/action_retract"
        android:title="@string/action_retract"
        android:orderInCategory="70"
        android:icon="@drawable/action_retract"
        app:showAsAction="always" />
    <item android:id="@+id/action_hint"
        android:title="@string/action_hint_on"
        android:orderInCategory="70"
        android:icon="@drawable/action_hint_off"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:visible="false"/>
</menu>
